--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
     display: flex;
     position: fixed;
     left: 0;
-    top:0;
+    top: 0;
     flex-direction: column;
     justify-content: space-evenly;
     grid-column: 1/4;
@@ -53,12 +53,19 @@ body {
 }
 
 .navigator-list-item {
-    display: block;
-    background-color: rgb(255,255,255,0.5);
+    display: flex;
+    justify-content: start;
+    background-color: rgb(255, 255, 255, 0.5);
     position: relative;
     margin: 0.5rem 0;
     font-size: 1.5rem;
     padding: 2rem;
+}
+
+.navigator-list-item p {
+    padding: 0;
+    margin: 0;
+    margin-left: 1rem;
 }
 
 .navigator-list-item::after {
@@ -73,7 +80,7 @@ body {
 }
 
 .navigator-list-item:hover::after {
-    border-left: 15px solid rgb(255,255,255,0.8);
+    border-left: 15px solid rgb(255, 255, 255, 0.8);
 }
 
 .navigator a {
@@ -85,7 +92,7 @@ body {
     grid-column: 5/13;
     width: 100%;
     display: grid;
-    grid-template-columns: repeat(12,1fr);
+    grid-template-columns: repeat(12, 1fr);
 }
 
 .content-page {
@@ -94,6 +101,7 @@ body {
     flex-direction: column;
     justify-content: center;
 }
+
 .content-page-small {
     grid-column: 1/8;
 }
@@ -102,29 +110,28 @@ body {
     grid-column: 1/11;
 }
 
-.table{
+.table {
     display: flex;
     justify-content: space-between;
 }
 
-.table-column{
+.table-column {
     display: flex;
     flex-direction: column;
     justify-content: start;
 }
 
-.table-header{
+.table-header {
     display: inline-block;
     background-color: #e84a5f;
     font-size: 1rem;
 }
 
-.table-element{
+.table-element {
     font-size: 1.2rem;
     padding: 0.2rem;
     letter-spacing: 0.1rem;
 }
-
 
 .project-list {
     display: flex;
@@ -145,10 +152,10 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    box-shadow: 2px 2px 2px rgb(0,0,0,0.2);
+    box-shadow: 2px 2px 2px rgb(0, 0, 0, 0.2);
     background-color: #e84a5f;
     padding: 1rem;
-    margin:1rem;
+    margin: 1rem;
 }
 
 .project-name {
@@ -175,20 +182,87 @@ body {
     display: flex;
     justify-content: space-evenly;
 }
+
 .contact-icons {
     border-radius: 50%;
-    box-shadow: 2px 2px 8px rgb(0,0,0,0.2);
+    box-shadow: 2px 2px 8px rgb(0, 0, 0, 0.2);
     font-size: 2rem;
 }
 
 .contact-icons:hover {
     animation: shuffle 0.5s ease-out;
 }
+
 @keyframes shuffle {
     0% {
         transform: rotateZ(15deg) scale(1.2);
     }
     100% {
         transform: rotateZ(0);
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    #container {
+        grid-template-columns: none;
+    }
+    .navigator {
+        width: 100%;
+        padding: 0;
+        left: auto;
+        top: auto;
+        bottom: 0;
+        justify-content: end;
+        background: transparent;
+    }
+    .navigator-name {
+        display: none;
+    }
+    .navigator-list {
+        display: flex;
+        justify-content: space-evenly;
+        margin: 0.1rem 0rem 0rem 0rem;
+        width: 100%;
+        background-color: #e84a5f;
+        /* border: 2px solid #2a363b; */
+        box-shadow: 2px 2px 16px rgb(0, 0, 0, 0.2);
+    }
+    .navigator-list-item {
+        padding: 0.1rem;
+        background: transparent;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+    }
+    .navigator-list-item p {
+        font-size: 0.8rem;
+        margin: 0;
+        margin-top: 0.5rem;
+    }
+    .navigator-list-item::after {
+        display: none;
+    }
+    .main {
+        grid-column: none;
+        display: flex;
+        justify-content: start;
+        align-items: flex-start;
+    }
+    .contact {
+        display: none;
+    }
+    .content-page {
+        grid-column: none;
+        padding: 0.5rem;
+        min-width: 100vw;
+        max-width: 100vw;
+        overflow-y: scroll;
+    }
+    .table {
+        flex-direction: column;
+    }
+    .project-card {
+        width: 100vw;
+        padding: 1rem;
     }
 }
