--- a/style.css
+++ b/style.css
@@ -205,14 +205,19 @@ body {
 @media only screen and (max-width: 768px) {
     #container {
         grid-template-columns: none;
+        overflow-y: hidden;
+        margin-bottom: 50px;
+        scroll-behavior: smooth;
     }
     .navigator {
-        width: 100%;
-        padding: 0;
-        left: auto;
+        position: fixed;
         top: auto;
         bottom: 0;
-        justify-content: end;
+        left: 0;
+        z-index: 9999;
+        padding: 0;
+        width: 100vw;
+        height: 50px;
         background: transparent;
     }
     .navigator-name {
@@ -221,7 +226,7 @@ body {
     .navigator-list {
         display: flex;
         justify-content: space-evenly;
-        margin: 0.1rem 0rem 0rem 0rem;
+        /* margin: 0.1rem 0rem 0rem 0rem; */
         width: 100%;
         background-color: #e84a5f;
         /* border: 2px solid #2a363b; */
